[package]
name = "callbreak_be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dashmap = "6.0.1"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["fast-rng", "v4"] }
